Scala Rest with Play